--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 db:
   name: pretest
-  username: docker
-  password: mongopw
-  localURI: mongodb://docker:mongopw@localhost:49153
+  username: root
+  password: examplepassword
+  localURI: mongodb://root:examplepassword@mongodb:27017
 
 server:
   port: 8080
